--- a/blog/core/templates/core/base.html
+++ b/blog/core/templates/core/base.html
@@ -9,11 +9,59 @@
 <title>Blog Site</title>
 <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.2/css/bulma.min.css">
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+<style>
+    nav.navbar {
+        height: 6rem !important;
+        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06) !important;
+    }
+</style>
 </head>
 
 <body>
-{% block content %}
-{% endblock %}
+    <nav class="navbar">
+        <div class="container">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="/">
+                    <strong>Blog</strong>
+                </a>
+                <span class="navbar-burger burger" data-target="navbarMenu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </span>
+            </div>
+
+            <div id="navbarMenu" class="navbar-menu">
+                <div class="navbar-end">
+                    <div class="navbar-item">
+
+                    </div>
+
+                    <a href="/" class="navbar-item is-active is-size-5 has-text-weight-semibold">
+                        Home
+                    </a>
+                    <a href="/" class="navbar-item is-size-5 has-text-weight-semibold">
+                        About
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <section class="section">
+        <div class="container">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <p>
+                Copyright (c) 2023 - Blog Spot
+            </p>
+        </div>
+    </footer>
 
 </body>
 </html>
