--- a/blog/core/templates/core/frontpage.html
+++ b/blog/core/templates/core/frontpage.html
@@ -3,6 +3,32 @@
 
 
 {% block content %}
-<h2>hi there </h2>
+<section class="hero">
+    <div class="hero-body">
+        <div class="container">
+            <section class="section">
+                <div class="columns">
+                    <div class="column is-8 is-offset-2">
+                        {% for post in posts %}
+                            <div class="content is-medium">
+                                <a href="/">
+                                    {% if post.image %}
+                                        <figure class="image">
+                                            <img src="{{ post.image.url }}">
+                                        </figure>
+                                    {% endif %}
+
+                                    <h2 class="subtitle is-4">{{ post.created_at|timesince }} ago</h2>
+                                    <h1 class="title">{{ post.title }}</h1>
+                                    <p>{{ post.intro }}</p>
+                                </a>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
+</section>
 
 {% endblock %}
