--- a/blog/blogsite/templates/blog/detail.html
+++ b/blog/blogsite/templates/blog/detail.html
@@ -40,8 +40,8 @@
                                     </div>
                                 </div>
                             </form>
-{% comment %}
-                            {% for comment in post.comments.all %}
+
+                            {% comment %} {% for comment in post.comments.all %}
                                 <article class="media box">
                                     <div class="media-content">
                                         <strong>{{ comment.name }}</strong> <small>{{ comment.created_at|timesince }} ago</small><br>
